tests/NormalTests/paczka1/small_fuzzy/81771313.err
Error in line 5: Tujcn S238 6,41
Error in line 1: A165 S238 70,3
